# caravel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
caravel_core/: Cargo.toml
caravel_core/src/: agent.rs  client.rs  config.rs  errors.rs  lib.rs  module.rs
caravel_core/src/agent/: capabilities.rs  dependencies.rs  errors.rs  events.rs  mod.rs  server.rs  upload.rs  util.rs
caravel_macro/: Cargo.toml
caravel_macro/src/: Cargo.toml  lib.rs
docs/: MODULES.md  NOTES.md
src/: agent.rs  cli.rs  client.rs  develop.rs  errors.rs  event.rs  events.rs  examplemodulefile.rs  lib.rs  manifest.rs  module.rs  transport.rs
