[package]
name = "caravel"
version = "0.1.0"
edition = "2021"
description = "Next-gen configuration management using Rust and Lua"
repository = "https://github.com/lcrownover/caravel"
readme = "README.md"
license-file = "LICENSE"
keywords = ["configuration", "management", "lua", "rust"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
libloading = "0.8.3"
mlua = { version = "0.9.6", features = ["luau", "vendored", "serialize"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
typetag = "0.2.16"
