[package]
name = "caravel"
version = "0.1.0"
edition = "2021"
description = "Next-gen configuration management using Rust and Lua"
repository = "https://github.com/caravel-io/caravel"
readme = "README.md"
license-file = "LICENSE"
keywords = ["configuration", "management", "lua", "rust"]
categories = ["command-line-utilities"]

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
libloading = "0.8.5"
mlua = { version = "0.10.0", features = ["luau", "vendored", "serialize"] }
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
typetag = "0.2.18"
uuid = { version = "1.11.0", features = ["v4"] }

caravel_core = { path = "caravel_core" }
caravel_macro = { path = "caravel_macro" }
