[package]
name = "caravel_core"
version = "0.1.0"
edition = "2021"
description = "Core libs for Caravel"
repository = "https://github.com/caravel-io/caravel"
keywords = ["configuration", "management", "lua", "rust"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["multipart"]}
clap = { version = "4.5.2", features = ["derive"] }
libloading = "0.8.3"
mlua = { version = "0.9.6", features = ["luau", "vendored", "serialize"] }
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
tracing = "0.1.40"
typetag = "0.2.16"
uuid = { version = "1.7.0", features = ["v4"] }
