[package]
name = "caravel_macro"
version = "0.1.2"
edition = "2021"
readme = "README.md"
description = "Caravel Proc Macros"
license-file = "LICENSE"
repository = "https://github.com/caravel-io/caravel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["extra-traits", "full"] }
